# UmbraStride

./: .dockerignore  .env.example  .gitignore  .vercelignore  LICENSE  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml  requirements.txt  vercel.json
.github/workflows/: ci.yml
api/: index.py
apps/web/: .env.example  Dockerfile  index.html  nginx.conf  package.json  vite.config.ts
apps/web/scripts/: verify-shadows.ts
apps/web/src/: App.tsx  MapView.tsx  ShadeOverlay.tsx  api.ts  buildingShadows.ts  buildings.ts  index.css  main.tsx  mapStyle.ts  osmtogeojson.d.ts  resolveAoi.ts  shademap.d.ts  sun.ts  vite-env.d.ts
data-vercel/graphs/: az-phoenix-vercel.edge-index.json  az-phoenix-vercel.meta.json
data-vercel/regions/: arizona.json
data/overrides/: demo.geojson.example
data/regions/: arizona.json
docs/: README.md  api.md  architecture.md  arizona.md  configuration.md  docker.md  glossary.md  paper-mapping.md  performance.md  setup.md  shade-cache.md  troubleshooting.md  user-guide.md  vercel-hobby.md
scripts/: bootstrap_aoi.py  bootstrap_arizona.py  dev-api.mjs  precompute_shade.py  seed_arizona.ps1  seed_arizona.sh  seed_demo.ps1  seed_demo.sh  seed_demo_cache.py
services/api/: Dockerfile  pyproject.toml
services/api/src/umbrastride_api/: __init__.py  main.py
services/api/tests/: test_api.py
services/shade-worker/: Dockerfile  package.json
services/shade-worker/src/: building-shade.ts  buildings.ts  profile.ts  server.ts  sun.ts  suncalc.d.ts  synthetic.ts
ui/: README.md  origin_destination.css  origin_destination.html  origin_destination.js
