[project]
name = "umbrastride"
version = "0.1.0"
description = "Shadow-oriented pedestrian navigation"
readme = "README.md"
authors = [
    { name = "Tanmay Godse" },
    { name = "Hasti Pareshbhai Patel" },
]
license = { text = "CC BY-NC 4.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115,<1",
    "networkx>=3.2,<4",
    "shapely>=2.0,<3",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["packages/geo-core/tests", "packages/routing-core/tests", "services/api/tests"]
pythonpath = ["packages/geo-core/src", "packages/routing-core/src", "services/api/src"]
