[project]
name = "umbrastride-api"
version = "0.1.0"
description = "FastAPI service for UmbraStride"
authors = [
    { name = "Tanmay Godse" },
    { name = "Hasti Pareshbhai Patel" },
]
license = { text = "CC BY-NC 4.0" }
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.8",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "umbrastride-geo-core",
    "umbrastride-routing-core",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
